style.css
html, body {
    margin: 0; padding: 0; border: 0; 
}
body {
    background: rgba(0, 0, 0, 0.85);
}

#main {
    background: darkgrey;
    width: 70%;
    position: relative;
    float: centre;
    top: 0;
    margin: auto;
    padding: 20px;
    min-height: 5000px;
}

.sidenav {
    overflow: hidden;
    background-color: #333;
}

.sidenav a {
    float: left;
    color: grey;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.sidenav a:hover {
    background-color: beige;
    color: black;
}

tab {
    overflow: visible;
    border: 1px solid cadetblue;
    background-color: black;
}

button {
    background-color: crimson;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

button:hover {
    background-color: #34bd38;
    color: white;
  }

button1 {
    background-color: blue;
    border: none;
    color: rgb(160, 189, 32);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

button1:hover {
    background-color: #34bdbd;
    color: black;
  }

  button2 {
    background-color: rgb(41, 220, 38);
    border: none;
    color: rgb(0, 0, 0);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}
button2:hover {
    background-color: #bd4f34;
    color: rgb(255, 255, 255);
  }

@media screen and (max-width: 700px) {
sidenav {
    width: 100%;
    height: auto;
    position: relative;
}
sidenav a {float: left;}
}

